--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./script.js"></script>
+
     <link rel="stylesheet" href="./styles.css" />
     <title>Portfolio</title>
   </head>
@@ -245,3 +247,4 @@
     </div>
   </body>
 </html>
+
