--- a/index.html
+++ b/index.html
@@ -56,12 +56,16 @@
             <li>Mongo DB</li>
             <li>Firebase</li>
             <li>SQL</li>
+            <li>SQL Express</li>
+            <li>C Sharp</li>
+            <li>Blazor</li>
             <li>Google Cloud</li>
+            <li>Digital Marketing</li>
             <li>SEO</li>
             <li>Google Ads</li>
             <li>Facebook Ads</li>
-            <li>Instagram Ads</li>
             
+
           </ul>
         </div>
       </div>
@@ -208,6 +212,14 @@
               </p>
             </a>
           </li>
+          <li>
+            <a href="https://github.com/codebreaker-sketch/QR_code-generator-manager">
+              <img src="./assets/projects/qr_gen.PNG" />
+              <p>Project #18 || 
+               QR Code Generator-Manager (Blazor-ADO.NET)
+              </p>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
@@ -247,4 +259,3 @@
     </div>
   </body>
 </html>
-
